--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
         "initializer_list": "cpp"
-    }
+    },
+    "python.pythonPath": "/home/ian/anaconda3/envs/analysis/bin/python"
 }
