--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,7 @@ rand_pcg = "0.3"
 clap = "2.33"
 itertools-num = "0.1"
 confy = "0.4"
-serde = "1.0"
+serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0"
+hdf5 = "0.7"
+ndarray = "0.14"
