--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.associations": {
         "initializer_list": "cpp"
     },
-    "python.pythonPath": "/home/ian/anaconda3/envs/analysis/bin/python"
+    "python.pythonPath": "/home/ian/anaconda3/envs/analysis/bin/python",
+    "jupyter.jupyterServerType": "local"
 }
