--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "md-lv"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["Ian Graham"]
 edition = "2018"
 description = "Overdamped Langevin dyanmics"
@@ -19,3 +19,4 @@ serde_json = "1.0"
 hdf5 = "0.7"
 ndarray = "0.14"
 arrayvec = "0.7.1"
+itertools = "0.10.3"
